# mistral-common

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  LICENCE  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: docs.yaml  integration_tests.yaml  integrations_test.yaml  lint_build_test.yaml  template_test.yaml
assets/: extra.css
chat_templates/: README.md  chat_templates.py  test_chat_templates.py
chat_templates/templates/: v1.jinja  v11.jinja  v11_audio.jinja  v11_image.jinja  v13.jinja  v13_audio.jinja  v13_image.jinja  v13_image_think.jinja  v13_think.jinja  v1_spm.jinja  v2.jinja  v2_spm.jinja  v3.jinja  v3_image.jinja  v3_image_spm.jinja  v3_spm.jinja  v7.jinja  v7_audio.jinja  v7_image.jinja  v7_image_spm.jinja  v7_spm.jinja
code_reference/SUMMARY/: index.html
code_reference/mistral_common/audio/: index.html
code_reference/mistral_common/base/: index.html
code_reference/mistral_common/deprecation/: index.html
docs/: gen_api_pages.py  index.md  models.md
docs/examples/: codestral_fim.md  index.md  inference.md  small_3.1_chat_completion.md
docs/usage/: experimental.md  images.md  index.md  install.md  requests.md  tokenizers.md  tools.md
examples/: client.ipynb  index.html  tokenizer.ipynb
examples/codestral_fim/: index.html
examples/inference/: index.html
examples/small_3.1_chat_completion/: index.html
integrations/chat_templates/: README.md  chat_templates.py  template_generator.py  test_chat_templates.py
integrations/tests/: conftest.py
models/: index.html
overrides/partials/: copyright.html
scripts/: compare_tokenizer.py  generate_chat_template.py
search/: search_index.json
src/mistral_common/: __init__.py  audio.py  base.py  deprecation.py  exceptions.py  image.py  imports.py  multimodal.py  tools.py
tests/: conftest.py  test_app.py  test_audio.py  test_base.py  test_converters.py  test_deprecation.py  test_fim_tokenizer.py  test_from_jsonl.py  test_generate_chat_template_cli.py  test_image.py  test_imports.py  test_integration_samples.py  test_json_utils.py  test_messages.py  test_mistral_tokenizer.py  test_model_settings.py  test_multimodal.py  test_multiprocessing.py  test_normalization.py  test_request.py  test_sentencepiece.py  test_tekken.py  test_think.py  test_tokenize_v1.py  test_tokenize_v2.py  test_tokenize_v3.py  test_tokenizer_base.py  test_tokenizer_v11.py  test_tokenizer_v13.py  test_tokenizer_v14.py  test_tokenizer_v15.py  test_tokenizer_v3_mm.py  test_tokenizer_v7.py  test_tokenizer_v7_audio.py  test_tokenizer_v7_audio_streaming.py  test_tokenizer_v7_audio_transcribe.py  test_tokenizer_v7_audio_tts.py  test_tool_message_openai_chunks.py  test_tools.py  test_utils.py
tests/data/: emoji.lark
tests/experimental/: test_app.py  test_think.py  test_tools.py  test_utils.py
tests/fixtures/: audio.py  chunks.py
tests/guidance/: test_guidance.py  test_tokenizer.py
tests/integrations/: conftest.py
tests/validation/: test_chat_validation.py  test_finetuning_validation.py  test_message_validation.py  test_request.py  test_serving_validation.py  test_validation.py
usage/: index.html
usage/experimental/: index.html
usage/images/: index.html
usage/install/: index.html
usage/requests/: index.html
usage/tokenizers/: index.html
usage/tools/: index.html
(+199 files in other folders)
